# mymedia

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/mymedia/: __init__.py  utils.py
src/mymedia/manga/: __init__.py  archive.py  calibre_meta.py  crop_cover.py  extract_epub.py  manga.py  split_image.py  split_manga.py
src/mymedia/sub/srt/: __init__.py  combine_line.py  srt.py
src/mymedia/utils/: suffix.py  utils.py
src/mymedia/video/: rename_tv.py  utils.py  video.py
tests/: conftest.py  test_mymedia.py  test_rename_tv.py  test_srt.py
tests/data/: test_srt.srt
