[tool.poetry]
name = "mymedia"
version = "0.1.0"
description = "Tools to manage my video and manga collections for media server like kavita and emby"
authors = ["Newyorker"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
pillow = ">=11.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]

addopts = "-s"
testpaths = [
    "tests"
]


[tool.poetry.scripts]
mymedia_rename_tv='mymedia.video.rename_tv:main'
mymedia_archive='mymedia.manga.archive:main'
media_extract_epub='mymedia.manga.extract_epub:main'
media_split_manga='mymedia.manga.split_manga:main'
